# fetpapiClientExample

./: CMakeLists.txt  README.md  azure-pipelines.yml
src/: MyOwnCoreProtocolHandlers.cpp  MyOwnCoreProtocolHandlers.h  MyOwnDiscoveryProtocolHandlers.cpp  MyOwnDiscoveryProtocolHandlers.h  MyOwnStoreNotificationProtocolHandlers.h  MyOwnStoreProtocolHandlers.cpp  MyOwnStoreProtocolHandlers.h  main.cpp
